--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,33 @@
         transform: rotate(360deg);
     }
 }
+
+.intlInlineMode_normal {
+    font-style: normal;
+}
+
+.intlInlineMode_translatable,
+.intlInlineMode_approvable,
+.intlInlineMode_reportable {
+    background: none;
+    font-style: normal;
+    padding: 0px;
+    width: auto;
+}
+
+.intlInlineMode_reportable {
+    border-bottom: 1px solid #f99;
+}
+
+.intlInlineMode_translatable,
+.intlInlineMode_approvable {
+    border-bottom: 1px solid #999;
+}
+
+.intlInlineMode_translatable:hover,
+.intlInlineMode_approvable:hover,
+.intlInlineMode_reportable:hover {
+    background-color: #fcc;
+    border-top: 1px solid #ccc;
+    cursor: help;
+}
